logging-od/1.6.0/v1/non-helm/kibana/7-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logging-ingress
  namespace: logging-od
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: kibana-auth
    ngnix.ingress.kubernetes.io/auth-realm: "Authentication Required - logging"
spec:
  tls:
    - hosts:
      - abc.example.com
      secretName: nginx-ingress-certs  
  rules:
  - host: abc.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: logging-kibana
          servicePort: 5601
